kubernetes-manifests/Ingress-Controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-k8s-project
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-2016-08
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:961166189364:certificate/d94229bb-8eff-4b87-96d8-ab253780987e
    external-dns.alpha.kubernetes.io/hostname: k8s.gangadharrecruitcrm.shop
spec:
  rules:
    - host: k8s.gangadharrecruitcrm.shop
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    # - host: argocd.gangadharrecruitcrm.shop
    #   http:
    #     paths:
    #       - path: /
    #         pathType: Prefix
    #         backend:
    #           service:
    #             name: argocd-server
    #             port:
    #               number: 32358
